# jane-street-inspired-market-prediction

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: universe.json
docs/: audience_summaries.md  baseline_metrics.md  baseline_results.md  cross_sectional_rank_regression_design.md  data_dictionary.md  decisions.md  expanded_feature_results.md  experiment_research_notes.md  gradient_boosting_results.md  improvement_hypotheses.md  improvement_menu.md  modeling_experiment_summary.md  modeling_problem.md  project_scope.md  selected_candidate.md  threshold_tuning_results.md  utility_aware_action_rule_results.md  utility_score.md  utility_weight_comparison.md
notebooks/: 01_data_orientation.ipynb  02_exploratory_data_analysis.ipynb
src/js_market_prediction/data/: build_modeling_dataset.py  build_splits.py  download.py
src/js_market_prediction/evaluation/: metrics.py  score_baseline_utilities.py  utility.py
src/js_market_prediction/features/: build_expanded_features.py  build_features.py
src/js_market_prediction/models/: run_cross_sectional_rank_regression.py  run_gradient_boosting_baseline.py  run_logistic_regression_baseline.py  run_logistic_regression_expanded_features.py  run_non_ml_baselines.py  run_utility_aware_action_rule.py  tune_logistic_threshold.py
src/js_market_prediction/reporting/: make_final_figures.py
tests/: validate_utility_examples.py
