[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "js-market-prediction"
version = "0.1.0"
description = "Jane Street-inspired market prediction project using public equity data."
requires-python = ">=3.14"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]